--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.12.5",
     "antd": "^4.9.4",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
@@ -35,7 +36,6 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@babel/runtime-corejs3": "^7.12.5",
     "@types/js-cookie": "^2.2.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -57,6 +57,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.5",
     "glob": "^7.1.6",
+    "glob-all": "^3.2.1",
     "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.5.0",
