--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "thread-loader": "^3.0.1",
     "typescript": "^4.1.2",
     "url-loader": "^4.1.1",
-    "webpack": "4",
-    "webpack-cli": "3",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
     "webpackbar": "^5.0.0-3"
