--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.dev.js",
+    "start": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js"
   },
   "browserslist": [
@@ -17,8 +17,8 @@
     "@babel/runtime-corejs3": "^7.12.5",
     "antd": "^4.9.4",
     "js-cookie": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -35,13 +35,15 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.6",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/qs": "^6.9.6",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-loadable": "^5.5.4",
     "@types/react-redux": "^7.1.12",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
     "@types/webpack-env": "^1.16.0",
     "assets-webpack-plugin": "^6.1.0",
@@ -51,16 +53,15 @@
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.5",
-    "glob": "^7.1.6",
     "glob-all": "^3.2.1",
-    "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.3.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "^1.3.2",
@@ -76,10 +77,10 @@
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "4",
     "thread-loader": "^3.0.1",
-    "typescript": "^4.1.2",
+    "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
     "webpackbar": "^5.0.0-3"
